--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="AgoraRTC_N-4.7.3.js"></script>
   </body>
 </html>
